Squashed commit of the following:
commit 60dc82957a46d1eda23df1bdd613bfdd708361b6
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Tue Jul 9 07:25:22 2024 +0200

    Make release

commit c0488248dbdd3733e94ecf372e998fef598c5510
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Mon Jul 8 15:13:10 2024 +0200

    Add banner in webinterface to inform user about a newer version

commit c40695cea694134e0f79df75623287de3e4589f5
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Mon Jul 8 10:32:32 2024 +0200

    Update threadfin.go

commit 022d2ceddbc40d7051a8c9e21c6f912edf01b587
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Mon Jul 8 10:23:33 2024 +0200

    Update updater

commit 29cdd9388b29a791546cf07f35c1a7ee1143e52e
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Mon Jul 8 07:36:20 2024 +0200

    Rework imgcache module

commit 21f1eeeeae3df2291b83213d0baad49af38386c7
Merge: 1fe2789 307d171
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Mon Jul 8 07:30:01 2024 +0200

    Merge branch 'beta' of github.com:marcelGoerentz/Threadfin into beta

commit 1fe27899adabd938b7a9c4c2c86e9c26d351c993
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Mon Jul 8 07:29:29 2024 +0200

    Fix update bug

commit 307d171527b604517e0373b1fb9b65a70cafd6dc
Merge: 12151ec 31bc0b5
Author: Marcel Goerentz <57457529+marcelGoerentz@users.noreply.github.com>
Date:   Fri Jul 5 23:15:33 2024 +0200

    Merge pull request #5 from marcelGoerentz/feature/clean_codebase

    Clean codebase

commit 31bc0b56e60f2406bcfee16cfe8c7eb487ff8aeb
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Fri Jul 5 23:13:38 2024 +0200

    Clean codebase

commit 48909e0cff52bbeb45932f3287e257052d8a98ba
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Fri Jul 5 22:13:26 2024 +0200

    Second step when reworking the cache

commit df03e9e78d60429998893c393329db55d361a4ec
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Fri Jul 5 12:30:49 2024

--- a/html/lang/en.json
+++ b/html/lang/en.json
@@ -381,7 +381,7 @@
     },
     "cacheImages": {
       "title": "Image Caching",
-      "description": "All images from the XMLTV file are cached, allowing faster rendering of the grid in the client.<br>Downloading the images may take a while and will be done in the background."
+      "description": "This option will rewrite the m3u file to local image cache for tv logos.<br>All images from the XMLTV file are cached, allowing faster rendering of the grid in the client.<br>Downloading the images may take a while and will be done in the background.<br>"
     },
     "replaceEmptyImages": {
       "title": "Replace missing program images",
@@ -436,6 +436,11 @@
       "title": "Store buffer in RAM",
       "description": "If checked, write buffer to RAM instead of writing to disk"
     },
+    "omitPorts":
+    {
+      "title": "Omit port",
+      "description": "By activating this checkbox the m3u file will not contain the port in the url"
+    },
     "listeningIp" :
     {
       "title": "Listening IPs",
@@ -443,23 +448,23 @@
     },
     "forceHttps":
     {
-      "title": "Force HTTPS",
-      "description": "With image caching enabled, if checked, will rewrite M3U and EPG urls to include https protocol as well as https port (default is 443)"
+      "title": "Force HTTPS to Upstream server",
+      "description": "When this checkbox is activated Threadfin will be forced to use HTTPS connection to upstream server <br>This is not recommended as the given urls will be rewritten to https urls, this can lead to 404 HTTP Error Codes</br>"
     },
-    "httpsPort":
+    "useHttps":
     {
-      "title": "HTTPS Port",
-      "description": "With image caching enabled, port to use for forcing https. Default is 443"
+      "title": "Use HTTPS",
+      "description": "Enable HTTPS protocol for Threadfin, HTTPS Port needs to be set, otherwise the 443 will be used!"
     },
-    "httpsThreadfinDomain":
+    "forceClientHttps":
     {
-      "title": "HTTPS Threadfin Domain",
-      "description": "With image caching enabled, rewrite the threadfin ip address in the m3u to use a domain for HTTPS mode. Do NOT include https (ex: somedomain.com)"
+      "title": "Force client to use https",
+      "description": "All URLs to this threadfin instance will be starting with https"
     },
-    "httpThreadfinDomain":
+    "threadfinDomain":
     {
       "title": "Threadfin Domain",
-      "description": "With image caching enabled, rewrite the threadfin ip address in the m3u to use a domain for HTTP mode. Do NOT include http (ex: somedomain.com)"
+      "description": "When not empty, this will rewrite the URLs in the new m3u to a FQDN.<br>Do NOT include http (ex: somedomain.com)</br>"
     },
     "enableNonAscii":
     {
