--- a/html/lang/en.json
+++ b/html/lang/en.json
@@ -444,7 +444,7 @@
     "listeningIp" :
     {
       "title": "Listening IPs",
-      "description": "Enter the listening IPs seprated by an ';' for example: 127.0.0.1;192.168.2.1"
+      "description": "Enter the listening IPs seprated by an ';' for example: 127.0.0.1;192.168.2.1<br>Changing this option will exit the program! You need to restart it if you didn't configured a restart!"
     },
     "forceHttps":
     {
