--- a/html/lang/en.json
+++ b/html/lang/en.json
@@ -356,11 +356,16 @@
   "settings": {
     "category": {
       "general": "General",
+      "costumization": "Costumization",
       "files": "Files",
       "network": "Network",
       "streaming": "Streaming",
       "backup": "Backup",
       "authentication": "Authentication"
+    },
+    "uploadCustomImage": {
+      "title": "Custom Image",
+      "description": "Here you can upload an image that will be shown to costumers when no more tuners are available in the playlist!"
     },
     "update": {
       "title": "Schedule for updating (Playlist, XMLTV, Backup)",
