Squashed commit of the following:
commit d816140f3a0c4a50bb17b403d771842a7400c061
Author: Marcel Goerentz <m.goerentz@t-online.de>
Date:   Mon Aug 26 11:57:33 2024 +0200

    Fix Dockerfile, Fix minor bugs in initializing phase

commit d2ff15a2948e64baea75e9552e76dd2eb53bdae9
Author: Marcel Goerentz <57457529+marcelGoerentz@users.noreply.github.com>
Date:   Mon Aug 26 08:44:22 2024 +0200

    Add feature to select binding IPs (#30)

    * Add functions to update, cancel and close button and finalize the feature. Update note texts

    * Add update button

    * Fix bug where only ; will be shown when no IP has been selected

commit 9882637fb6ae9f08f16a7cd4c10d49abcd9acebe
Author: Marcel Goerentz <57457529+marcelGoerentz@users.noreply.github.com>
Date:   Sun Aug 25 00:26:16 2024 +0200

    First version of new listeningIP option (#29)

    * Initial commit

    * First running version

    * Update version

commit a5a8755ea44360476507f27d0b672f0615fc91fc
Author: Marcel Goerentz <57457529+marcelGoerentz@users.noreply.github.com>
Date:   Thu Aug 22 23:43:45 2024 +0200

    Update threadfin.go

commit 72cbbdbda98835e1ca10a8db1d606757ebcc529a
Author: Marcel Goerentz <57457529+marcelGoerentz@users.noreply.github.com>
Date:   Thu Aug 22 23:42:41 2024 +0200

    Update buffer.go

commit 3d1abf8933eb0d940e0f11596207516f2ff6d813
Author: Marcel Goerentz <57457529+marcelGoerentz@users.noreply.github.com>
Date:   Thu Aug 22 23:37:56 2024 +0200

    Fix ram usage (#27)

    * Update threadfin.go

    * Fixed docker link on README (#16)

    * Sync with origin project (#17)

    * Sync with original project

    * Fix Dockerfile

    * Fix bug where wrong DVR IP was used + remove ioutil package completely + fix bug where wrong argument has been passed to ffmpeg

    * Fix streaming bug

    * Fix bug where counter was not correct displayed

    * Update version so a new beta will be released

    * Fix Dockerfile so beta realease will be from beta branch

    * Fix Dockerfile so b

--- a/html/lang/en.json
+++ b/html/lang/en.json
@@ -461,10 +461,10 @@
       "title": "Omit port",
       "description": "By activating this checkbox the m3u file will not contain the port in the url"
     },
-    "listeningIp" :
+    "bindingIPs" :
     {
-      "title": "Listening IPs",
-      "description": "Enter the listening IPs seprated by an ';' for example: 127.0.0.1;192.168.2.1<br>Changing this option will exit the program! You need to restart it if you didn't configured a restart!"
+      "title": "Binding IP(s)",
+      "description": "By clicking on the input a dialogue will open where you can select the IP(s)<br>Please note that these are also the DVR IPs<br>Changing this option and saving the settings will exit the program!<br>You need to restart it if you didn't configured an automatical restart!"
     },
     "forceHttps":
     {
@@ -474,7 +474,7 @@
     "useHttps":
     {
       "title": "Use HTTPS",
-      "description": "Enable HTTPS protocol for Threadfin, HTTPS Port needs to be set, otherwise the 443 will be used!"
+      "description": "Enable HTTPS protocol for Threadfin, HTTPS Port needs to be set, otherwise the 443 will be used!<br>Also make sure that server.crt and server.key are placed in the config folder!<br>The key file needs to be unencrypted!"
     },
     "forceClientHttps":
     {
@@ -484,7 +484,7 @@
     "threadfinDomain":
     {
       "title": "Threadfin Domain",
-      "description": "When not empty, this will rewrite the URLs in the new m3u to a FQDN.<br>Do NOT include http (ex: somedomain.com)</br>"
+      "description": "When not empty, this will rewrite the URLs in the new m3u to a FQDN.<br>It will also rewrite the shown DVR IP in the server info dialogue.<br>Do NOT include http (ex: somedomain.com)</br>"
     },
     "enableNonAscii":
     {
