Customize no more streams video (#31)
* Add function to place image within config folder to generate the no-more-streams video

* Implement a dynamic dialogue for IP Bindings

* Add user interface to upload custom image

--- a/html/lang/en.json
+++ b/html/lang/en.json
@@ -47,6 +47,7 @@
     "craeteAccount": "Create Account",
     "resetLogs": "Reset Logs",
     "uploadLogo": "Upload Logo",
+    "uploadCustomImage": "Upload custom image",
     "sortChannelsAlpha": "Sort Channels Alphabetically",
     "sortChannelNumbers": "Sort Channels"
   },
@@ -356,11 +357,16 @@
   "settings": {
     "category": {
       "general": "General",
+      "customization": "Customization",
       "files": "Files",
       "network": "Network",
       "streaming": "Streaming",
       "backup": "Backup",
       "authentication": "Authentication"
+    },
+    "uploadCustomImage": {
+      "title": "Custom Image",
+      "description": "Here you can upload an image that will be shown to users when no more tuners are available in the playlist!"
     },
     "update": {
       "title": "Schedule for updating (Playlist, XMLTV, Backup)",
