Add function to change the language of the web client, Add functions to stop and restart the webserver, update the web client and web server behaviour when settings changed
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/web/public/lang/de.json
+++ b/web/public/lang/de.json
@@ -363,7 +363,8 @@
       "network": "Netzwerk",
       "streaming": "Streaming",
       "backup": "Sicherung",
-      "authentication": "Authentifizierung"
+      "authentication": "Authentifizierung",
+      "webclient": "Web client"
     },
     "uploadCustomImage": {
       "title": "Benutzerdefiniertes Bild",
@@ -556,6 +557,13 @@
     "authenticationAPI": {
       "title": "API-Authentifizierung",
       "description": "Zugriff auf die API-Schnittstelle nur mit Authentifizierung möglich."
+    },
+    "webclient": {
+      "language": {
+        "title": "Web client Sprache",
+        "description": "Ändern der Sprache des Web Clients"
+
+      }
     }
   },
   "wizard": {
