--- a/web/public/lang/de.json
+++ b/web/public/lang/de.json
@@ -50,7 +50,9 @@
     "uploadLogo": "Logo hochladen",
     "uploadCustomImage": "Benutzerdefiniertes Bild hochladen",
     "sortChannelsAlpha": "Kanäle alphabetisch sortieren",
-    "sortChannelNumbers": "Kanäle sortieren"
+    "sortChannelNumbers": "Kanäle sortieren",
+    "backToTop": "Gehe nach oben",
+    "serverInformation": "Server Information"
   },
   "filter": {
     "table": {
@@ -618,6 +620,29 @@
     "update": {
       "title": "Update verfügbar",
       "content": "Eine neuere Version von Threadfin ist verfügbare. Bitte auf die neuste Version aktualisieren."
+    }
+  },
+  "serverInfo": {
+    "title": "Server Information",
+    "header": {
+      "serverInfo": "Server Information",
+      "streamInfo": "Stream Information",
+      "changeVersion": "Change Threadfin Version"
+    },
+    "label": {
+      "version": "Threadfin Version",
+      "errors": "Errors",
+      "warnings": "Warnings",
+      "dvr": "DVR IP",
+      "m3uUrl": "M3U URL (Specifc groups: [http://...?group-title=foo,bar])",
+      "xepgUrl": "XMLTV URL",
+      "streams": "Filtered Channels",
+      "xepg": "Mapped Channels"
+    },
+    "changeVersion": {
+      "changeToBeta": "Change to beta version",
+      "changeToRelease": "Change to release version",
+      "changing": "Changing..."
     }
   }
 }
