Enhance the web client
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/web/public/lang/de.json
+++ b/web/public/lang/de.json
@@ -45,7 +45,7 @@
     "search": "Suchen",
     "update": "Aktualisieren",
     "updating": "Aktualisiere...",
-    "craeteAccount": "Konto erstellen",
+    "createAccount": "Konto erstellen",
     "resetLogs": "Protokolle zurücksetzen",
     "uploadLogo": "Logo hochladen",
     "uploadCustomImage": "Benutzerdefiniertes Bild hochladen",
