--- a/web/public/lang/en.json
+++ b/web/public/lang/en.json
@@ -45,7 +45,7 @@
     "search": "Search",
     "update": "Update",
     "updating": "Updating...",
-    "craeteAccount": "Create Account",
+    "createAccount": "Create Account",
     "resetLogs": "Reset Logs",
     "uploadLogo": "Upload Logo",
     "uploadCustomImage": "Upload custom image",
